[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reasonchain"
version = "0.5.0"
description = "LLM reasoning depth optimizer with visible reasoning chains — see HOW your AI thinks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "ReasonChain Lab"}]
keywords = ["llm", "reasoning", "chain-of-thought", "prompt-engineering", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Mr9669/reasonchain"
Repository = "https://github.com/Mr9669/reasonchain"
